# twitter-rust

./: Cargo.toml
migrations/2023-02-15-062725_create_tweets/: up.sql
migrations/2023-02-15-062825_create_likes/: up.sql
src/: likes.rs  main.rs  tweets.rs
