[package]
name = "twitter-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
diesel = { version = "2.0.3", features = ['postgres', 'r2d2', 'uuid', 'chrono'] }
dotenv = "0.15.0"
uuid = { version = "0.8.2", features = ["v4"]}
chrono = { version = "0.4"}
